[tool.poetry]
name = "good_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "good_bot"}]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "~13.0"


[tool.poetry.scripts]
good_bot = "good_bot.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
